--- a/body-matter/3r/equacions-diferencials-II.tex
+++ b/body-matter/3r/equacions-diferencials-II.tex
@@ -74,14 +74,20 @@
 		\labelname{conjunt \ensuremath{\omega}-límit}\label{def:conjunt omega-límit}
 		\labelname{conjunt \ensuremath{\alpha}-límit}\label{def:conjunt alpha-límit}
 		Sigui \(\varphi_{x}\colon\mathbb{R}\longrightarrow\mathbb{R}^{n}\) l'òrbita d'un punt \(x\in\mathbb{R}^{n}\). Aleshores definim
-		\[\omega(x)=\{y\in\mathbb{R}^{n}\mid\text{existeix }(t_{n})_{n\in\mathbb{N}}\text{ amb }t_{n}\overset{n\to\infty}{\longrightarrow}+\infty\text{ tal que }\varphi_{x}(t_{n})\overset{n\to\infty}{\longrightarrow}y\}\]
+		\[
+		    \omega(x)=\{y\in\mathbb{R}^{n}\mid\text{existeix }(t_{n})_{n\in\mathbb{N}}\text{ amb }t_{n}\overset{n\to\infty}{\longrightarrow}+\infty\text{ tal que }\varphi_{x}(t_{n})\overset{n\to\infty}{\longrightarrow}y\}
+		\]
 		com el conjunt \(\omega\)-límit de \(x\) i
-		\[\alpha(x)=\{y\in\mathbb{R}^{n}\mid\text{existeix }(t_{n})_{n\in\mathbb{N}}\text{ amb }t_{n}\overset{n\to\infty}{\longrightarrow}-\infty\text{ tal que }\varphi_{x}(t_{n})\overset{n\to\infty}{\longrightarrow}y\}\]
+		\[
+		    \alpha(x)=\{y\in\mathbb{R}^{n}\mid\text{existeix }(t_{n})_{n\in\mathbb{N}}\text{ amb }t_{n}\overset{n\to\infty}{\longrightarrow}-\infty\text{ tal que }\varphi_{x}(t_{n})\overset{n\to\infty}{\longrightarrow}y\}
+		\]
 		com el conjunt \(\alpha\)-límit de \(x\).
 	\end{definition}
 	\begin{observation}
 		Siguin \(x\in\mathbb{R}^{n}\) un punt i
-		\[\dot{x}=f(x)\quad\text{i}\quad\dot{x}=-f(x)\]
+		\[
+		    \dot{x}=f(x)\quad\text{i}\quad\dot{x}=-f(x)
+		\]
 		dues equacions diferencials. Aleshores el conjunt \(\omega\)-límit de \(x\) en la primera equació diferencial és el conjunt \(\alpha\)-límit de \(x\) en la segona equació diferencial i, anàlogament, el conjunt \(\alpha\)-límit de \(x\) en la primera equació diferencial és el conjunt \(\omega\)-límit de \(x\) en la segona equació diferencial.
 	\end{observation}
 	\begin{definition}[Conjunts invariants]
@@ -89,7 +95,9 @@
 		\labelname{conjunt negativament invariant}\label{def:conjunt negativament invariant}
 		\labelname{conjunt invariant}\label{def:conjunt invariant}
 		Sigui \(\varphi_{x}\) l'òrbita d'un punt \(x\in\mathbb{R}^{n}\). Aleshores definim
-		\[\gamma^{+}(x)=\{\varphi_{x}(t)\mid t\geq0\},\quad\gamma^{-}(x)=\{\varphi_{x}(t)\mid t\leq0\}\quad\text{i}\quad\gamma(x)=\gamma^{+}(x)\cup\gamma^{-}(x),\]
+		\[
+		    \gamma^{+}(x)=\{\varphi_{x}(t)\mid t\geq0\},\quad\gamma^{-}(x)=\{\varphi_{x}(t)\mid t\leq0\}\quad\text{i}\quad\gamma(x)=\gamma^{+}(x)\cup\gamma^{-}(x),
+		\]
 		i direm que un conjunt \(C\subseteq\mathbb{R}^{n}\) és positivament invariant si per a tot \(y\in C\) tenim que \(\gamma^{+}(y)\subseteq C\), que és negativament invariant si per a tot \(y\in C\) tenim que \(\gamma^{-}(y)\subseteq C\) i que és invariant si per a tot \(y\in C\) tenim que \(\gamma(y)\subseteq C\).
 	\end{definition}
 	\begin{theorem}
@@ -168,35 +176,53 @@
 	\begin{definition}[Equació en derivades parcials de primer ordre]
 		\labelname{equació en derivades parcials de primer ordre}\label{def:equació en derivades parcials de primer ordre}
 		Siguin \(\Omega\subseteq\mathbb{R}^{2n+1}\) un obert i \(F\colon\Omega\longrightarrow\mathbb{R}\) una funció. Aleshores, denotant
-		\[u_{i}(x)=\frac{\partial u(x)}{\partial x_{i}},\]
+		\[
+		    u_{i}(x)=\frac{\partial u(x)}{\partial x_{i}},
+		\]
 		direm que l'expressió
-		\[F(x_{1},\dots,x_{n},u(x),u_{1}(x),\dots,u_{n}(x))=0\]
+		\[
+		    F(x_{1},\dots,x_{n},u(x),u_{1}(x),\dots,u_{n}(x))=0
+		\]
 		és una equació en derivades parcials de primer ordre sobre \(\Omega\).
 	\end{definition}
 	\begin{definition}[Solució d'una equació en derivades parcials]
 		\labelname{solució d'una equació en derivades parcials}\label{def:solució d'una equació en derivades parcials}
 		Siguin
-		\[F(x_{1},\dots,x_{n},u(x),u_{1}(x),\dots,u_{n}(x))=0\]
+		\[
+		    F(x_{1},\dots,x_{n},u(x),u_{1}(x),\dots,u_{n}(x))=0
+		\]
 		una equació en derivades parcials de primer ordre sobre un obert \(\Omega\) i \(\Phi(x)\colon\Omega\longrightarrow\mathbb{R}\) una funció de classe \(\mathcal{C}^{2}(\Omega)\) tal que
-		\[F(x_{1},\dots,x_{n},\Phi(x),\Phi_{1}(x),\dots,\Phi_{n}(x))=0\]
+		\[
+		    F(x_{1},\dots,x_{n},\Phi(x),\Phi_{1}(x),\dots,\Phi_{n}(x))=0
+		\]
 		per a tot \(x\in\Omega\). Aleshores direm que \(\Phi\) és una solució de l'equació en derivades parcials.
 	\end{definition}
 	\subsection{Equacions quasi-lineals de primer ordre}
 	\begin{definition}[Equació quasi-lineal]
 		\labelname{equació diferencial quasi-lineal}\label{def:equació diferencial quasi lineal}
 		Siguin \(\Omega\subseteq\mathbb{R}^{n}\times\mathbb{R}\) un obert, \(\{P_{i}\}_{i=1}^{N}\) una família de funcions de \(\Omega\) a \(\mathbb{R}\) i \(R\colon\Omega\longrightarrow\mathbb{R}\) una funció. Aleshores direm que l'expressió
-		\[\sum_{i=1}^{N}\left(P_{i}(x,u(x))\frac{\partial u(x)}{\partial x_{i}}\right)=R(x,u(x))\]
+		\[
+		    \sum_{i=1}^{N}\left(P_{i}(x,u(x))\frac{\partial u(x)}{\partial x_{i}}\right)=R(x,u(x))
+		\]
 		és una equació diferencial quasi-lineal de primer ordre.
 	\end{definition}
 	\begin{example}
 		Exemples d'equacions quasi-lineals són, amb \(K>0\), l'equació de la calor
-		\[\frac{\partial^{2} u}{\partial x^{2}}=K\frac{\partial u}{\partial t}\]
+		\[
+		    \frac{\partial^{2} u}{\partial x^{2}}=K\frac{\partial u}{\partial t}
+		\]
 		o l'equació de la corda vibrant
-		\[\frac{\partial^{2} u}{\partial x^{2}}=K\frac{\partial^{2} u}{\partial t^{2}},\]
+		\[
+		    \frac{\partial^{2} u}{\partial x^{2}}=K\frac{\partial^{2} u}{\partial t^{2}},
+		\]
 		mentre que exemples d'equacions en derivades parcials que no siguin quasi-lineals són l'equació no lineal de la calor
-		\[\frac{\partial^{2} u}{\partial x^{2}}+f(u)=K\frac{\partial u}{\partial t}\]
+		\[
+		    \frac{\partial^{2} u}{\partial x^{2}}+f(u)=K\frac{\partial u}{\partial t}
+		\]
 		o la llei de la conservació escalar
-		\[\frac{\partial u(t)}{\partial t}+\divergencia(f(u(t)))=0.\]
+		\[
+		    \frac{\partial u(t)}{\partial t}+\divergencia(f(u(t)))=0.
+		\]
 	\end{example}
 	
 \end{document} 
